Use distinct classes for hanging quote types.

--- a/example/sample.css
+++ b/example/sample.css
@@ -51,3 +51,21 @@ abbr {
 .hlaquo {
 	margin-left: -0.42em;
 	}
+.sbdquo {
+	margin-right: 0.42em;
+	}
+.hbdquo {
+	margin-left: -0.42em;
+	}
+.sldquo {
+	margin-right: 0.42em;
+	}
+.hldquo {
+	margin-left: -0.42em;
+	}
+.slsquo {
+	margin-right: 0.42em;
+	}
+.hlsquo {
+	margin-left: -0.42em;
+	}
